Revision history

- Make rename check that name doesn't already exist.

1.0.0-rc1 :
	- Added utils.py to have common utilities.
    - Rename works.