@@ -4,6 +4,12 @@ import os
 from django.conf import settings
 from django.core.exceptions import ImproperlyConfigured
 
+def get_max_upload_size():
+    if not settings.FILE_UPLOAD_MAX_SIZE:
+        raise ImproperlyConfigured, 'file_manager requires FILE_UPLOAD_MAX_SIZE variable be defined in settings.py' 
+
+    return settings.FILE_UPLOAD_MAX_SIZE
+
 def get_document_root():
     if not settings.DOCUMENT_ROOT:
         raise ImproperlyConfigured, 'file_manager requires DOCUMENT_ROOT variable be defined in settings.py' 
