@@ -1,4 +1,6 @@
+import mimetypes
 import os
+
 from datetime import datetime
 from grp import getgrgid
 from pwd import getpwuid
@@ -70,11 +72,22 @@ def index(request, url=None):
         item['ctime'] = datetime.fromtimestamp(itemstat.st_ctime)
         item['mtime'] = datetime.fromtimestamp(itemstat.st_mtime)
 
+        mime = mimetypes.guess_type(os.path.join(full_path, file),False)[0]
+  
+        # Assume we can't edit anything except text and unknown.
+        if not mime:
+            item['can_edit'] = True
+        elif 'text' in mime:
+            item['can_edit'] = True
+        else:
+            item['can_edit'] = False
+
         # permissions (numeric)
         octs = "%04d" % int(oct(itemstat.st_mode & 0777))
         
         dperms = '-'
         if item['directory']:
+            item['can_edit'] = False
             dperms = 'd'
 
         item['perms_numeric'] = octs
@@ -109,19 +122,15 @@ def mkdir(request, url=None):
     full_path = os.path.join(utils.get_document_root(), url)
 
     if request.method == 'POST': 
-        form = forms.NameForm(request.POST,initial={'path':full_path}) 
-
-        # FIXME: Check that the directory to make doesn't already exist.
-        # parent = '/'.join(clean_url.split('/')[:-1])
+        form = forms.NameForm(full_path, None, request.POST) 
 
         if form.is_valid(): 
             #Make the directory
-
             os.mkdir(os.path.join(full_path, form.cleaned_data['name']))
 
             return redirect('list', url=url)
     else:
-        form = forms.NameForm() # An unbound form 
+        form = forms.NameForm(full_path, None) # An unbound form 
 
     return render_to_response("admin/file_manager/mkdir.html", 
                               {'form': form, 'url': url,},
@@ -130,7 +139,37 @@ def mkdir(request, url=None):
 @staff_member_required
 def delete(request, url=None):
     # Delete a file/directory
-    pass
+    
+    url = utils.clean_path(url)
+    parent = '/'.join(url.split('/')[:-1])
+    full_path = os.path.join(utils.get_document_root(), url)
+
+    if request.method == 'POST': 
+        
+        # If this is a directory, do the walk
+        if os.path.isdir(full_path):
+            pass
+        else:
+            os.remove(full_path)
+
+        return redirect('list', url=parent)
+
+    files = []
+
+    # If this is a directory, generate the list of files to be removed.
+    if os.path.isdir(full_path):
+        files.append(url)
+#        for root, dirs, files, in os.walk(full_path):
+#            for name in files: 
+#                files.append(os.path.join(full_path, name))
+#            for name in dirs:
+#                files.append(os.path.join(full_path, name))
+    else:
+        files.append(url)
+    
+    return render_to_response("admin/file_manager/delete.html", 
+                              {'url': url, 'files': files},
+                              context_instance=template.RequestContext(request))
 
 @staff_member_required
 def move(request, url=None):
@@ -143,14 +182,14 @@ def move(request, url=None):
 
     parent = '/'.join(url.split('/')[:-1])
     full_parent = os.path.join(utils.get_document_root(), parent).rstrip('/')
+    full_path = os.path.join(utils.get_document_root(), url)
+    directory = url.replace(parent, "", 1).lstrip('/')
 
     if request.method == 'POST': 
-        form = forms.DirectoryForm(request.POST) 
+        form = forms.DirectoryForm(directory, full_path, request.POST) 
 
         if form.is_valid(): 
     
-            directory = url.replace(parent, "", 1).lstrip('/')
-            full_path = os.path.join(utils.get_document_root(), url)
 
             new = os.path.join(form.cleaned_data['parent'], directory)
 
@@ -159,7 +198,7 @@ def move(request, url=None):
 
             return redirect('list', url=parent)
     else:
-        form = forms.DirectoryForm(initial={'parent':full_parent}) 
+        form = forms.DirectoryForm(directory, full_path, initial={'parent':full_parent}) 
 
     return render_to_response("admin/file_manager/move.html", 
                               {'form': form, 
@@ -175,13 +214,13 @@ def rename(request, url=None):
     # Not really happy about the l/rstrips.
     url = utils.clean_path(url)
     parent = '/'.join(url.split('/')[:-1])
+    full_parent = os.path.join(utils.get_document_root(), parent).rstrip('/')
+    full_path = os.path.join(utils.get_document_root(), url)
 
     if request.method == 'POST': 
-        form = forms.NameForm(request.POST) 
+        form = forms.NameForm(full_parent, full_path, request.POST) 
 
         if form.is_valid(): 
-            full_path = os.path.join(utils.get_document_root(), url)
-            full_parent = os.path.join(utils.get_document_root(), parent).rstrip('/')
             new = os.path.join(full_parent, form.cleaned_data['name'])
 
             # Rename 
@@ -191,7 +230,7 @@ def rename(request, url=None):
     else:
         directory = url.replace(parent, "", 1).lstrip('/')
         data = {'name':directory}
-        form = forms.NameForm(initial=data) # An unbound form 
+        form = forms.NameForm(full_parent, full_path, initial=data)
 
     return render_to_response("admin/file_manager/rename.html", 
                               {'form': form, 'url': url,},
@@ -202,19 +241,29 @@ def update(request, url=None):
     """
         Update
     """
-    clean_url = utils.clean_path(url)
-    parent = '/'.join(clean_url.split('/')[:-1])
-    full_path = os.path.join(utils.get_document_root(), clean_url)
+    url = utils.clean_path(url)
+    parent = '/'.join(url.split('/')[:-1])
+    full_path = os.path.join(utils.get_document_root(), url)
 
     if request.method == 'POST': 
-        form = forms.DirectoryForm(request.POST) 
+        form = forms.ContentForm(request.POST) 
 
         if form.is_valid(): 
+            file = open(full_path, 'w+')
+
+            # FIXME: This shoule check the originals line ending and
+            # preserve it.
+
+            # This makes it be \r\n be just \n
+            file.write(form.cleaned_data['content'].replace('\r\n', '\n'))
+            file.close()
 
             return redirect('list', url=parent)
     else:
-        data = {}
-        form = forms.DirectoryForm(initial=data) # An unbound form 
+        # Read the data from file
+        content = open(full_path).read()
+        data = {'content':content}
+        form = forms.ContentForm(initial=data) # An unbound form 
 
     return render_to_response("admin/file_manager/update.html", 
                               {'form': form, 'url': url,},
@@ -223,9 +272,24 @@ def update(request, url=None):
 @staff_member_required
 def upload(request, url=None):
     """
-        Upload
+        Upload a new file.
     """
+    url = utils.clean_path(url)
+    path = os.path.join(utils.get_document_root(), url)
+
+    if request.method == 'POST': 
+        form = forms.UploadForm(path, data=request.POST, files=request.FILES) 
+
+        if form.is_valid(): 
+            file_path = os.path.join(path, form.cleaned_data['file'].name)
+            destination = open(file_path, 'wb+')
+            for chunk in form.cleaned_data['file'].chunks():
+                destination.write(chunk) 
+
+            return redirect('list', url=url)
+    else:
+        form = forms.UploadForm(path)
+
     return render_to_response("admin/file_manager/upload.html", 
-                              {'data': request.path,
-                               'url': url,},
+                              {'form': form, 'url': url,},
                               context_instance=template.RequestContext(request))
